// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`telepath: wagtail.blocks.FieldBlock it renders correctly 1`] = `
"<div class=\\"field char_field widget-text_input fieldname-test_charblock\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix\\" id=\\"the-prefix\\">The widget</p>
            <span></span>
          </div>
        <p class=\\"help\\">drink <em>more</em> water</p></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock deleteBlock() deletes a block 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><div id=\\"the-prefix-0-container\\" aria-hidden=\\"false\\">
        <input type=\\"hidden\\" data-listblock-deleted=\\"\\" id=\\"the-prefix-0-deleted\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" data-listblock-index=\\"\\" id=\\"the-prefix-0-order\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div class=\\"c-sf-block__header\\">
                <span class=\\"c-sf-block__header__icon\\">
                  <i class=\\"icon icon-pilcrow\\"></i>
                </span>
                <h3 class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\">
                  <span class=\\"c-sf-block__type\\"></span>
                  <button type=\\"button\\" id=\\"the-prefix-0-moveup\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move up' %}\\">
                    <i class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" id=\\"the-prefix-0-movedown\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move down' %}\\">
                    <i class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" data-listblock-delete-button=\\"\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Delete' %}\\">
                    <i class=\\"icon icon-bin\\" aria-hidden=\\"true\\"></i>
                  </button>
                </div>
              </div>
              <div class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><div id=\\"the-prefix-1-container\\" aria-hidden=\\"true\\" style=\\"overflow: hidden; height: 0px; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px;\\">
        <input type=\\"hidden\\" data-listblock-deleted=\\"\\" id=\\"the-prefix-1-deleted\\" name=\\"the-prefix-1-deleted\\" value=\\"1\\">
        <input type=\\"hidden\\" data-listblock-index=\\"\\" id=\\"the-prefix-1-order\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div class=\\"c-sf-block__header\\">
                <span class=\\"c-sf-block__header__icon\\">
                  <i class=\\"icon icon-pilcrow\\"></i>
                </span>
                <h3 class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\">
                  <span class=\\"c-sf-block__type\\"></span>
                  <button type=\\"button\\" id=\\"the-prefix-1-moveup\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move up' %}\\">
                    <i class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" id=\\"the-prefix-1-movedown\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move down' %}\\">
                    <i class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" data-listblock-delete-button=\\"\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Delete' %}\\">
                    <i class=\\"icon icon-bin\\" aria-hidden=\\"true\\"></i>
                  </button>
                </div>
              </div>
              <div class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div></div>
        <button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
          <i aria-hidden=\\"true\\">+</i>
        </button>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock it renders correctly 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><div id=\\"the-prefix-0-container\\" aria-hidden=\\"false\\">
        <input type=\\"hidden\\" data-listblock-deleted=\\"\\" id=\\"the-prefix-0-deleted\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" data-listblock-index=\\"\\" id=\\"the-prefix-0-order\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div class=\\"c-sf-block__header\\">
                <span class=\\"c-sf-block__header__icon\\">
                  <i class=\\"icon icon-pilcrow\\"></i>
                </span>
                <h3 class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\">
                  <span class=\\"c-sf-block__type\\"></span>
                  <button type=\\"button\\" id=\\"the-prefix-0-moveup\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move up' %}\\">
                    <i class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" id=\\"the-prefix-0-movedown\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move down' %}\\">
                    <i class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" data-listblock-delete-button=\\"\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Delete' %}\\">
                    <i class=\\"icon icon-bin\\" aria-hidden=\\"true\\"></i>
                  </button>
                </div>
              </div>
              <div class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><div id=\\"the-prefix-1-container\\" aria-hidden=\\"false\\">
        <input type=\\"hidden\\" data-listblock-deleted=\\"\\" id=\\"the-prefix-1-deleted\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" data-listblock-index=\\"\\" id=\\"the-prefix-1-order\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div class=\\"c-sf-block__header\\">
                <span class=\\"c-sf-block__header__icon\\">
                  <i class=\\"icon icon-pilcrow\\"></i>
                </span>
                <h3 class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\">
                  <span class=\\"c-sf-block__type\\"></span>
                  <button type=\\"button\\" id=\\"the-prefix-1-moveup\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move up' %}\\">
                    <i class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" id=\\"the-prefix-1-movedown\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move down' %}\\">
                    <i class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" data-listblock-delete-button=\\"\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Delete' %}\\">
                    <i class=\\"icon icon-bin\\" aria-hidden=\\"true\\"></i>
                  </button>
                </div>
              </div>
              <div class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div></div>
        <button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
          <i aria-hidden=\\"true\\">+</i>
        </button>
      </div>"
`;

exports[`telepath: wagtail.blocks.StreamBlock it renders correctly 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>plenty</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-stream-count=\\"\\" value=\\"2\\">
        <div data-streamfield-stream-container=\\"\\"><div>
        <button data-streamblock-menu-open=\\"\\" type=\\"button\\" title=\\"Add\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
          <i aria-hidden=\\"true\\">+</i>
        </button>
        <div data-streamblock-menu-outer=\\"\\" style=\\"display: none;\\" aria-hidden=\\"true\\">
          <div data-streamblock-menu-inner=\\"\\" class=\\"c-sf-add-panel\\"><div class=\\"c-sf-add-panel__grid\\"><button type=\\"button\\" class=\\"c-sf-button action-add-block-test_block_a\\">
            <span class=\\"c-sf-button__icon\\">
              <i class=\\"icon icon-placeholder\\"></i>
            </span>
            <span class=\\"c-sf-button__label\\">Test Block B</span>
          </button><button type=\\"button\\" class=\\"c-sf-button action-add-block-test_block_b\\">
            <span class=\\"c-sf-button__icon\\">
              <i class=\\"icon icon-pilcrow\\"></i>
            </span>
            <span class=\\"c-sf-button__label\\">Test Block B</span>
          </button></div></div>
        </div>
      </div><div aria-hidden=\\"false\\">
        <input type=\\"hidden\\" data-streamblock-deleted=\\"\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" data-streamblock-index=\\"\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"test_block_a\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"1\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div class=\\"c-sf-block__header\\">
                <span class=\\"c-sf-block__header__icon\\">
                  <i class=\\"icon icon-placeholder\\"></i>
                </span>
                <h3 class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\">
                  <span class=\\"c-sf-block__type\\">Test Block B</span>
                  <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move up' %}\\">
                    <i class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move down' %}\\">
                    <i class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" data-streamblock-delete-button=\\"\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Delete' %}\\">
                    <i class=\\"icon icon-bin\\" aria-hidden=\\"true\\"></i>
                  </button>
                </div>
              </div>
              <div class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-text_input fieldname-test_charblock\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">Block A widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><div>
        <button data-streamblock-menu-open=\\"\\" type=\\"button\\" title=\\"Add\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
          <i aria-hidden=\\"true\\">+</i>
        </button>
        <div data-streamblock-menu-outer=\\"\\" style=\\"display: none;\\" aria-hidden=\\"true\\">
          <div data-streamblock-menu-inner=\\"\\" class=\\"c-sf-add-panel\\"><div class=\\"c-sf-add-panel__grid\\"><button type=\\"button\\" class=\\"c-sf-button action-add-block-test_block_a\\">
            <span class=\\"c-sf-button__icon\\">
              <i class=\\"icon icon-placeholder\\"></i>
            </span>
            <span class=\\"c-sf-button__label\\">Test Block B</span>
          </button><button type=\\"button\\" class=\\"c-sf-button action-add-block-test_block_b\\">
            <span class=\\"c-sf-button__icon\\">
              <i class=\\"icon icon-pilcrow\\"></i>
            </span>
            <span class=\\"c-sf-button__label\\">Test Block B</span>
          </button></div></div>
        </div>
      </div><div aria-hidden=\\"false\\">
        <input type=\\"hidden\\" data-streamblock-deleted=\\"\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" data-streamblock-index=\\"\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"test_block_b\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"2\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div class=\\"c-sf-block__header\\">
                <span class=\\"c-sf-block__header__icon\\">
                  <i class=\\"icon icon-pilcrow\\"></i>
                </span>
                <h3 class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\">
                  <span class=\\"c-sf-block__type\\">Test Block B</span>
                  <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move up' %}\\">
                    <i class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Move down' %}\\">
                    <i class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\"></i>
                  </button>
                  <button type=\\"button\\" data-streamblock-delete-button=\\"\\" class=\\"c-sf-block__actions__single\\" title=\\"{% trans 'Delete' %}\\">
                    <i class=\\"icon icon-bin\\" aria-hidden=\\"true\\"></i>
                  </button>
                </div>
              </div>
              <div class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-test_textblock\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">Block B widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><div>
        <button data-streamblock-menu-open=\\"\\" type=\\"button\\" title=\\"Add\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
          <i aria-hidden=\\"true\\">+</i>
        </button>
        <div data-streamblock-menu-outer=\\"\\" style=\\"display: none;\\" aria-hidden=\\"true\\">
          <div data-streamblock-menu-inner=\\"\\" class=\\"c-sf-add-panel\\"><div class=\\"c-sf-add-panel__grid\\"><button type=\\"button\\" class=\\"c-sf-button action-add-block-test_block_a\\">
            <span class=\\"c-sf-button__icon\\">
              <i class=\\"icon icon-placeholder\\"></i>
            </span>
            <span class=\\"c-sf-button__label\\">Test Block B</span>
          </button><button type=\\"button\\" class=\\"c-sf-button action-add-block-test_block_b\\">
            <span class=\\"c-sf-button__icon\\">
              <i class=\\"icon icon-pilcrow\\"></i>
            </span>
            <span class=\\"c-sf-button__label\\">Test Block B</span>
          </button></div></div>
        </div>
      </div></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.StructBlock it renders correctly 1`] = `
"<div class=\\"struct-block\\">
        
          <span>
            <div class=\\"help\\">
              <div class=\\"icon-help\\">?</div>
              use <strong>lots</strong> of these
            </div>
          </span>
        <div class=\\"field required\\">
            <label class=\\"field__label\\" for=\\"the-prefix-heading_text\\">Heading text</label>
            <div class=\\"field char_field widget-text_input fieldname-heading_text\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-heading_text\\" id=\\"the-prefix-heading_text\\">Heading widget</p>
            <span></span>
          </div>
        </div>
      </div>
          </div><div class=\\"field \\">
            <label class=\\"field__label\\" for=\\"the-prefix-size\\">Size</label>
            <div class=\\"field choice_field widget-select fieldname-size\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-size\\" id=\\"the-prefix-size\\">Size widget</p>
            <span></span>
          </div>
        </div>
      </div>
          </div></div>"
`;

exports[`telepath: wagtail.blocks.StructBlock with formTemplate it renders correctly 1`] = `
"<div class=\\"custom-form-template\\">
          <p>here comes the first field:</p>
          <div class=\\"field char_field widget-text_input fieldname-heading_text\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-heading_text\\" id=\\"the-prefix-heading_text\\">Heading widget</p>
            <span></span>
          </div>
        </div>
      </div>
          <p>and here is the second:</p>
          <div class=\\"field choice_field widget-select fieldname-size\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-size\\" id=\\"the-prefix-size\\">Size widget</p>
            <span></span>
          </div>
        </div>
      </div>
        </div>"
`;
